# engnr-nsu-cpp-2021

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CalcCommands.cpp  CalcCommands.h  CalcException.h  README.md  SafeInt.hpp  linked_list.h  main.cpp
.github/buildsteps/linux/: run-unittests.sh
.github/buildsteps/windows/: build.bat  run-unittests.bat
.github/workflows/: ci.yml
1/: CMakeLists.txt  README.md  hashfunctions.cpp  hashfunctions.h  main.cpp
2/: CMakeLists.txt  CalcCommands.cpp  CalcCommands.h  CalcException.h  main.cpp
2/test/: CMakeLists.txt  tests.cpp
3/: CMakeLists.txt  LinkedList.h  README.md  linked_list.h  main.cpp  tests.cpp
